# SerialData-Qt

./: CMakeLists.txt  Main.qml  README.md  main.cpp  serial.cpp  serial.h
